force-app/main/default/objects/DMAPP__AM_Plan_Metric_Score__c/DMAPP__AM_Plan_Metric_Score__c.object-meta.xml
<CustomObject>
    <label>AM Plan Metric Score</label>
    <nameField>
        <label>AM Plan Metric Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AM Plan Metric Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>