force-app/main/default/objects/DMAPP__AM_Plan_Metric_Score__c/fields/DMAPP__Potential_Opportunities_Advice__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Potential_Opportunities_Advice__c</fullName>
    <label>Potential Opportunities Advice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>