force-app/main/default/objects/DMAPP__AM_Plan_Metric_Score__c/fields/DMAPP__Segmentation_Score_Advice__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Segmentation_Score_Advice__c</fullName>
    <label>Segmentation Score Advice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>