force-app/main/default/objects/DMAPP__AM_Plan_Metric_Score__c/fields/DMAPP__Solutions_In_Plan__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Solutions_In_Plan__c</fullName>
    <label>Solutions In Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>