force-app/main/default/objects/DMAPP__AM_Plan_Metric_Score__c/fields/DMAPP__Strategic_Contribution_Target_Green__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Strategic_Contribution_Target_Green__c</fullName>
    <label>Strategic Contribution Target Green</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>