force-app/main/default/objects/DMAPP__AM_Plan_Metric_Score__c/fields/DMAPP__Strategic_Penetration_Advice__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Strategic_Penetration_Advice__c</fullName>
    <label>Strategic Penetration Advice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>