force-app/main/default/objects/DMAPP__AM_Plan_Metric_Score__c/fields/DMAPP__Strategic_Penetration_Badge__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Strategic_Penetration_Badge__c</fullName>
    <label>Strategic Penetration Badge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>