force-app/main/default/objects/DMAPP__AM_Plan_Metric_Score__c/fields/DMAPP__Value_Targeted_Solutions_Closed_Opps__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Value_Targeted_Solutions_Closed_Opps__c</fullName>
    <label>Value Targeted Solutions Closed Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>